horizontal overflow fix

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,3 +17,6 @@ button{
     font-family: inherit;
     cursor: pointer;
 }
+body, html{
+    overflow-x: hidden;
+}
